25122022 -fix finish API